# fluentres

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-prod.yml  publish-test.yml  release_test.yml
examples/: 01_basic_usage.py  02_safe_decorator.py  03_form_validation.py  04_async_example.py  05_railroad_oriented.py  06_combine_results.py  README.md
src/flow_res/: __init__.py  async_result.py  combinators.py  guards.py  result.py  safe.py
src/fluentres/: __init__.py  result.py
src/fluentres/core/: combine.py  combine_all.py  is_err.py  is_ok.py  safe.py
src/fluentres/error/: aggregate_err.py
tests/: test_async_result_decorator.py  test_awaitable_result.py  test_combine.py  test_combine_all.py  test_is_err.py  test_is_ok.py  test_result.py  test_safe.py
tests/core/: test_combine.py  test_combine_all.py  test_is_err.py  test_is_ok.py  test_safe.py
tests/error/: test_aggregate_err.py
tests/testutils/: error.py
